# actix-web-example

./: .env.test  Cargo.toml  README.md  docker-compose.yml
configurations/: Cargo.toml
configurations/src/: settings.rs
docker/postgres/: Dockerfile
docker/redis/: Dockerfile
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/common/: error.rs  mod.rs
domain/src/models/: entity_id.rs  mod.rs  passwords.rs  primitives.rs  user.rs
domain/src/repositories/: token.rs  user.rs
infra/: Cargo.toml
infra/examples/: redis.rs
infra/src/: lib.rs
infra/src/repositories/postgres/: common.rs  mod.rs  user.rs
infra/src/repositories/redis/: token.rs
infra/src/routes/: accounts.rs  common.rs  extractors.rs  middleware.rs  mod.rs
macros/: Cargo.toml
macros/src/: builder.rs  display.rs  domain_primitive.rs  getter.rs  lib.rs  optional_string_primitive.rs  optional_string_tuple_primitive.rs  primitive.rs  types.rs  utils.rs  value_field.rs
macros/tests/: tests.rs
migrations/: 20240329073744_create_users_table.down.sql  20240329073744_create_users_table.up.sql
resources/tests/settings/: default.yml  development.yml  production.yml
routes/: Cargo.toml
routes/src/: accounts.rs  common.rs  lib.rs
scripts/: drop_test_databases.sh  run_containers.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
settings/: default.yml  development.yml  production.yml
test_suite/: Cargo.toml
test_suite/tests/: accounts.rs  common.rs  db.rs  health_check.rs  helpers.rs  lib.rs
use_cases/: Cargo.toml
use_cases/src/: accounts.rs  jwt.rs  lib.rs  passwords.rs  settings.rs
