[package]
name = "configurations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
config = "0.14.0"
enum-display = "0.1.4"
log = { version = "0.4.21", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
]

[dev-dependencies]
dotenvx = "0.0.2"
