[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
enum-display = "0.1.4"
macros = { path = "../macros" }
once_cell = "1.19.0"
regex = "1.10.4"
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
thiserror = "1.0.58"
time = { version = "0.3.34", features = [
    "parsing",
    "formatting",
    "serde",
    "macros",
] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.17.0", features = ["derive"] }
