[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.53", features = ["full"] }

[dev-dependencies]
domain = { path = "../domain" }
regex = "1.10.4"
validator = { version = "0.17.0", features = ["derive"] }
