[package]
name = "routes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
domain = { path = "../domain" }
mime = "0.3.17"
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["std"] }
thiserror = "1.0.58"
time = { version = "0.3.34", features = [
    "parsing",
    "formatting",
    "serde",
    "macros",
] }
tracing = { version = "0.1.40", features = ["log"] }
use_cases = { path = "../use_cases" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
