[package]
name = "test_suite"
version = "0.1.0"
autotests = false
autobenches = false
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0.81"
log = { version = "0.4.21", features = ["serde"] }
once_cell = "1.19.0"
reqwest = "0.12.2"
server = { path = "../server" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "test_suite"
path = "tests/lib.rs"
harness = true
