[package]
name = "test_suite"
version = "0.1.0"
autotests = false
autobenches = false
edition = "2021"
publish = false

[dev-dependencies]
anyhow = "1.0.81"
dotenvx = "0.0.2"
log = { version = "0.4.21", features = ["serde"] }
mime = "0.3.17"
once_cell = "1.19.0"
reqwest = "0.12.2"
serde_json = { version = "1.0.114", features = ["std"] }
server = { path = "../server" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
