[package]
name = "test_suite"
version = "0.1.0"
autotests = false
autobenches = false
edition = "2021"
publish = false

[dev-dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
configurations = { path = "../configurations" }
cookie = "0.18.1"
deadpool-redis = { version = "0.15.0", features = ["rt_tokio_1", "serde"] }
domain = { path = "../domain" }
dotenvx = "0.0.2"
infra = { path = "../infra" }
log = { version = "0.4.21", features = ["serde"] }
mime = "0.3.17"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json", "cookies"] }
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde_json = { version = "1.0.114", features = ["std"] }
server = { path = "../server" }
time = { version = "0.3.34", features = [
    "parsing",
    "formatting",
    "serde",
    "macros",
] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
use_cases = { path = "../use_cases" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
    "migrate",
]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
