[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
enum-display = "0.1.4"
macros = { path = "../macros" }
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tracing = { version = "0.1.40", features = ["log"] }
